# curso-pandas

./: README.md  pyproject.toml
data/: products.csv:Zone.Identifier
dia1/: dataframes.ipynb  exercicio1.ipynb  exercicio2.ipynb  series.ipynb
dia2/: import_csv.ipynb  import_csv_02.ipynb  import_excel.ipynb  import_parquet.ipynb
dia3/: convertendo_tipos.ipynb  novas_colunas.ipynb  ordenacao.ipynb  remove_dup.ipynb  remove_dup_ex.ipynb
dia4/: groupby.ipynb  merge.ipynb  nans.ipynb
dia5/: concat.ipynb  concatenao.py  merge_2.ipynb  pandas_db.ipynb
